# midi2cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  idf_component.yml  library.json  library.properties
.github/workflows/: ci.yml
docs/: coverage.md  profile-ids.md
examples/HelloMIDI2/: HelloMIDI2.ino
examples/adafruit-feather-rp2040-bridge-midi2/: CMakeLists.txt  README.md
examples/adafruit-feather-rp2040-bridge-midi2/src/: feather_bridge.cpp  main.cpp  tusb_config.h  ump_router.h  usb_descriptors.c
examples/adafruit-feather-rp2040-host-midi2/: CMakeLists.txt  README.md
examples/adafruit-feather-rp2040-host-midi2/src/: feather_host.cpp  feather_host.h  main.cpp  tusb_config.h
examples/arduino-nano-esp32-midi2/: README.md
examples/arduino-nano-esp32-midi2/idf/main/: CMakeLists.txt  arduino_nano_esp32_midi2.cpp  arduino_nano_esp32_midi2.h  board_midi2.cpp  board_midi2.h  idf_component.yml  main.cpp  tusb_config.h
examples/daisyseed-host-midi2/: Makefile  README.md
examples/daisyseed-midi2/: Makefile  README.md
examples/esp32-c6-devkitc-multi-midi2/: README.md
examples/esp32-p4-devkit-bridge-midi2/: README.md
examples/esp32-p4-devkit-bridge-midi2/idf/components/tinyusb/: CMakeLists.txt  usb_descriptors.c
examples/esp32-p4-devkit-bridge-midi2/idf/main/: CMakeLists.txt  esp32_p4_devkit_bridge.cpp  esp32_p4_devkit_bridge.h  idf_component.yml  main.cpp  tusb_config.h
examples/esp32-p4-devkit-bridge2-midi2/: README.md
examples/esp32-p4-devkit-host-midi2/: README.md
examples/esp32-p4-devkit-host-midi2/idf/components/tinyusb/: CMakeLists.txt
examples/esp32-p4-devkit-usb-midi2/: README.md
examples/esp32-p4-devkit-usb-midi2/idf/components/tinyusb/: CMakeLists.txt  usb_descriptors.c
examples/esp32-p4-devkit-usb-midi2/idf/main/: CMakeLists.txt  board_midi2.cpp  board_midi2.h  esp32_p4_devkit_midi2.cpp  esp32_p4_devkit_midi2.h  idf_component.yml  main.cpp  tusb_config.h
examples/esp32-s3-devkitc-host-midi2/: README.md
examples/esp32-s3-devkitc-usb-midi2/: README.md
examples/esp32-s3-devkitc-usb-midi2/idf/main/: CMakeLists.txt  board_midi2.cpp  board_midi2.h  esp32_s3_devkitc_midi2.cpp  esp32_s3_devkitc_midi2.h  idf_component.yml  main.cpp  tusb_config.h
examples/hello-midi2-arduino/: README.md  hello-midi2-arduino.ino
examples/nrf52840-promicro-midi2/: CMakeLists.txt  README.md
examples/nrf52840-promicro-midi2/src/: board_midi2.cpp  board_midi2.h  main.cpp  nrf52840_promicro_midi2.cpp  nrf52840_promicro_midi2.h  tusb_config.h  usb_descriptors.c
examples/ra4m1-weact-device-midi2/: CMakeLists.txt  README.md
examples/ra4m1-weact-device-midi2/bsp/weact_ra4m1/: board.h
examples/ra4m1-weact-device-midi2/bsp/weact_ra4m1/ra_cfg/fsp_cfg/bsp/: bsp_pin_cfg.h
examples/ra4m1-weact-device-midi2/bsp/weact_ra4m1/ra_gen/: pin_data.c
examples/ra4m1-weact-device-midi2/bsp/weact_ra4m1/script/: memory_regions.ld
examples/ra4m1-weact-device-midi2/src/: board_midi2.cpp  board_midi2.h  main.cpp  tusb_config.h  usb_descriptors.c  weact_ra4m1_midi2.cpp  weact_ra4m1_midi2.h
examples/rp2040-midi2/: CMakeLists.txt  README.md
examples/rp2040-midi2/src/: board_midi2.cpp  board_midi2.h  main.cpp  rp2040_midi2.cpp  rp2040_midi2.h  tusb_config.h  usb_descriptors.c
examples/rp2040-promicro-ump-test-bench/: CMakeLists.txt  README.md
examples/rp2040-promicro-ump-test-bench/src/: board_midi2.cpp  board_midi2.h  catalog.cpp  catalog.h  gabarito_battery.h  main.cpp  rp2040_midi2.cpp  rp2040_midi2.h  tusb_config.h  usb_descriptors.c
examples/rp2350-pico2-midi2/: CMakeLists.txt  README.md
examples/sparkfun-promicro-rp2350-midi2/: CMakeLists.txt  README.md
examples/sparkfun-promicro-rp2350-midi2/src/: main.cpp  rp2040_midi2.cpp  tusb_config.h  usb_descriptors.c
examples/t-display-s3-midi2/: README.md
examples/t-display-s3-midi2/idf/components/piano_display/: CMakeLists.txt  idf_component.yml  piano_display.cpp
examples/t-display-s3-midi2/idf/components/piano_display/include/: piano_display.h
examples/t-display-s3-midi2/idf/main/: CMakeLists.txt  board_midi2.cpp  board_midi2.h  idf_component.yml  main.cpp  t_display_s3_midi2.cpp  t_display_s3_midi2.h  tusb_config.h
examples/t-display-s3-shield-host-midi2/: README.md
examples/t-picoc3-device-midi2/: CMakeLists.txt  README.md  t-picoc3.md
examples/t-picoc3-device-midi2/src/: board_midi2.cpp  board_midi2.h  lgfx_user.h  main.cpp  scene_display.cpp  scene_display.h  t_picoc3_midi2.cpp  t_picoc3_midi2.h  tusb_config.h  usb_descriptors.c
examples/teensy41-control-surface/: README.md  boards.local.txt  teensy41-control-surface.ino
examples/waveshare-rp2040-midi2/: CMakeLists.txt  README.md
examples/waveshare-rp2040-midi2/src/: main.cpp  rp2040_midi2.cpp  rp2040_midi2.h  tusb_config.h  usb_descriptors.c
examples/waveshare-rp2350-usb-a-bridge-midi2/: CMakeLists.txt  README.md
examples/waveshare-rp2350-usb-a-bridge-midi2/src/: feather_bridge.cpp  main.cpp  tusb_config.h  ump_router.c  usb_descriptors.c
examples/waveshare-rp2350-usb-a-midi2/: CMakeLists.txt  README.md
examples/waveshare-rp2350-usb-a-midi2/src/: board_midi2.cpp  main.cpp  tusb_config.h  usb_descriptors.c
examples/weact-STM32F411CEU6-blackpill-device-midi2/: CMakeLists.txt  README.md
examples/weact-STM32F411CEU6-blackpill-device-midi2/src/: board_midi2.cpp  board_midi2.h  main.cpp  tusb_config.h  usb_descriptors.c  weact_blackpill_f411_midi2.cpp  weact_blackpill_f411_midi2.h
examples/xiao-samd21-midi2/: CMakeLists.txt  README.md
examples/xiao-samd21-midi2/src/: board_midi2.cpp  board_midi2.h  main.cpp  tusb_config.h  usb_descriptors.c  xiao_samd21_midi2.cpp  xiao_samd21_midi2.h
scripts/: vendor_midi2.sh
src/: midi2.c  midi2.h  midi2_bridge.cpp  midi2_bridge.h  midi2_ci.cpp  midi2_ci.h  midi2_cpp.h  midi2_device.cpp  midi2_device.h  midi2_host.cpp  midi2_host.h  midi2_rx_ring.h  midi2cpp.h
tests/: CMakeLists.txt  test_common.h  test_midi2_bridge.cpp  test_midi2_ci.cpp  test_midi2_device.cpp  test_midi2_flex.cpp  test_midi2_host.cpp
tools/: compliance-audit.py  compliance-wire-test.py
(+76 files in other folders)
